# esat

./: .buildinfo  .coverage  .gitattributes  .gitignore  CITATION.cff  Cargo.toml  EPA NMF Workflow.docx  LICENSE  MANIFEST.in  README.html  README.md  _dev-requirements.txt  conf.py  doc-requirements.txt  environment.yml  environment0.yml  genindex.html  index.html  index.rst  main.py  objects.inv  paper.bib  paper.html  paper.md  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  rust-pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: README.doctree  environment.pickle  index.doctree  paper.doctree
.doctrees/docs/: cli.doctree  esat.cli.doctree  esat.data.doctree  esat.doctree  esat.error.doctree  esat.model.doctree  esat.rotational.doctree  eval.doctree  modules.doctree
.github/workflows/: code-test.yml  documentation.yml  draft-paper.yml  package-publish.yml  python-package.yml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
_downloads/0a43fd882cb1af304a19f3e49ab3e42a/: epa_esat_workflow_01.ipynb
_sources/: README.md  index.rst  paper.md.txt
_sources/docs/: esat.cli.rst  esat.error.rst  esat.model.rst  esat.rst  eval.rst  modules.rst
_static/: documentation_options.js
data/: Dataset-Baltimore_con.txt  Dataset-Baltimore_unc.txt  Dataset-BatonRouge-con.csv  Dataset-BatonRouge-unc.csv  Dataset-StLouis-con.csv  Dataset-StLouis-unc.csv
data/output/: bs_test00.pkl  sa_test00-contribution.csv  sa_test00-profile.csv  sa_test00-residuals.csv  sa_test00-vprime.csv  sa_test00.pkl
docs/: .buildinfo  README.html  cli.html  esat.cli.html  esat.data.html  esat.error.html  esat.html  esat.model.html  esat.rotational.html  esat.rst  eval.html  genindex.html  index.html  modules.html  modules.rst  py-modindex.html  search.html  searchindex.js  src.data.rst  src.error.rst  src.model.rst  src.rotational.rst  src.rst
docs/.doctrees/: README.doctree  environment.pickle  index.doctree
docs/_sources/: README.md
docs/_static/: documentation_options.js
docs/docs/: cli.html  esat.cli.html  esat.data.html  esat.error.html  esat.html  esat.model.html  esat.rotational.html  eval.html  modules.html
docs/doctrees/: README.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
esat/: configs.py  estimator.py  helpers.py  main.py  metrics.py  utils.py
esat/cli/: esat_cli.py
esat/data/: analysis.py  datahandler.py  impute.py
esat/error/: bootstrap.py  bs_disp.py  displacement.py  error.py
esat/model/: batch_sa.py  ls_nmf.py  optimization.py  recombinator.py  sa.py  ws_nmf.py
esat/rotational/: constrained.py
eval/: factor_catalog.py  factor_comparison.py  loss_value_test.py  perturbation.py  profile_compare_test.py  runtime_optimization.py  runtime_test.py  rust_optimizations_test.py  simulator.py  test_rust_optimizations.py  validate_rust_functions.py
jats/: paper.jats
notebooks/: br_factor_compare.ipynb  component_search.ipynb  data_exploration.ipynb  dep-base_run_data-shift.ipynb  dep-br_factor_compare.ipynb  dep-input-flow.ipynb  dep-nmf-py_walkthrough-br2.ipynb  dep-sklearn-test.ipynb  epa_esat_algorithms-test.ipynb  epa_esat_algorithms.ipynb  epa_esat_crossvalidation_01.ipynb  epa_esat_input-perturbation-workflow-v2.ipynb  epa_esat_k-estimate.ipynb  epa_esat_k-estimate_2.ipynb  epa_esat_k-estimate_wk1.ipynb  epa_esat_k-estimate_wk3.ipynb  epa_esat_k-estimate_wk4.ipynb  epa_esat_k_cv.ipynb  epa_esat_perturb_k-estimate.ipynb  epa_esat_profiler.ipynb  epa_esat_simulator_01.ipynb  epa_esat_simulator_01_profile.ipynb  epa_esat_simulator_03.ipynb  epa_esat_uncertainty-perturbation-workflow.ipynb  epa_esat_workflow_01-new_plots.ipynb  epa_esat_workflow_01.ipynb  epa_nmf-py_algorithms.ipynb  gcolab-epa_nmf_py_workflow_01.ipynb  gemini-models.ipynb  me-algorithm-review.ipynb  nmf-py_walkthrough-br.ipynb  nmf-py_walkthrough-sl.ipynb  nmf-py_walkthrough_detailed.ipynb  pmf-output-compare.ipynb  pmf_output_exploration.ipynb  profile_comparison.ipynb  simulated_data_test.ipynb  uncertainty-perturbation-workflow.ipynb
notebooks/.ipynb_checkpoints/: base_run-checkpoint.ipynb  component_search-checkpoint.ipynb  dep-base_run_data-shift-checkpoint.ipynb  dep-nmf-py_walkthrough-br-checkpoint.ipynb  dep-pmf-output-compare-checkpoint.ipynb  epa_esat_algorithms-test-checkpoint.ipynb  epa_esat_crossvalidation_01-checkpoint.ipynb  epa_esat_input-perturbation-workflow-checkpoint.ipynb  epa_esat_input-perturbation-workflow-v2-checkpoint.ipynb  epa_esat_k-estimate-checkpoint.ipynb  epa_esat_k-estimate_2-checkpoint.ipynb  epa_esat_k-estimate_wk1-checkpoint.ipynb  epa_esat_k-estimate_wk2-checkpoint.ipynb  epa_esat_k-estimate_wk3-checkpoint.ipynb  epa_esat_perturb_k-estimate-checkpoint.ipynb  epa_esat_uncertainty-perturbation-workflow-checkpoint.ipynb  epa_esat_workflow_01-checkpoint.ipynb  epa_nmf-py_algorithms-checkpoint.ipynb  gcolab-epa_nmf_py_workflow_01-checkpoint.ipynb  gemini-analysis-checkpoint.ipynb  gemini-models-checkpoint.ipynb  input-flow-checkpoint.ipynb  nmf-py_walkthrough-sl-checkpoint.ipynb  nmf-py_walkthrough_detailed-checkpoint.ipynb  profile_comparison-checkpoint.ipynb  simulated_data_test-checkpoint.ipynb  washington_data_clean-checkpoint.ipynb
notebooks/exp/: epa_esat_input-perturbation-workflow.ipynb  epa_esat_k-estimate_wk3.ipynb  epa_esat_profiler.ipynb  epa_esat_simulator_02.ipynb  epa_esat_synth_01_test.ipynb  esat_estimator.py
notebooks/old/: component_search.ipynb  (+10 more)
paper/: paper.bib  paper.md
python/: metrics.py  utils.py
rust/: lib.rs
src/: cli.py  configs.py  lib.rs  metrics.py  utils.py
tests/: conftest.py  factor_comparison.py  factor_profiling.py  hybrid-model.py  hybrid-nmf-test.py  loss_value_test.py  model_run.py  optimized_train_test.py  profile_compare_test.py  random_data_test.py  runtime_test.py  simulated_data_test.py  test_skl_nmf.py  validate_rust_functions.py
(+161 files in other folders)
