[package]
name = "esat_rust"
version = "0.1.0"
edition = "2021"
authors = ["Deron Smith <smith.deron@epa.gov>"]
description = "EPA Environmental Source Apportionment Toolkit (ESAT) Rust Algorithms"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "esat_rust"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.20.0"
nalgebra = {version="0.32.4", features = ["rayon"]}
ndarray = "0.15.6"
rayon = "1.9.0"
pyo3 = "0.20.3"

[features]
extension-module = ["pyo3/extension-module", "pyo3/generate-import-lib"]
default = ["extension-module"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3