[package]
name = "esat_rust"
version = "0.1.0"
edition = "2021"
authors = ["Deron Smith <smith.deron@epa.gov>"]
description = "EPA Environmental Source Apportionment Toolkit (ESAT) Rust Algorithms"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "esat_rust"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.20.0"
nalgebra = {version="0.33.2", features = ["rayon"]}
ndarray = "0.16.1"
rayon = "1.10.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
indicatif = "0.18.0"
console = "0.16.0"

[features]
extension-module = ["pyo3/extension-module", "pyo3/generate-import-lib"]
default = ["extension-module"]

[profile.dev]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
debug = false
