# esat pyproject.toml for setuptools and setuptools-rust
[build-system]
requires = ["setuptools >70.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "esat"
version = "2024.0.1"
requires-python = ">=3.10"
description = "EPA's Environmental Source Apportionment Toolkit python package."
authors = [
    {name = "Deron Smith", email = "smith.deron@epa.gov"}
]
maintainers = [
    {name = "Deron Smith", email = "smith.deron@epa.gov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.1",
    "fastcluster>=1.2",
    "fuzzy-c-means>=1.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.19",
    "scipy>=1.12",
    "tqdm>=4.66"
]

[project.urls]
Repository = "https://github.com/quanted/esat.git"
Issues = "https://github.com/quanted/esat/issues"

[tool.setuptools]
package-dir = {"esat" = "esat", "esat_eval" = "eval"}
include-package-data = true

[tool.setuptools-rust]
profile = "release"

[project.scripts]
esat = "esat.cli.esat_cli:esat_cli"

[[tool.setuptools-rust.ext-modules]]
target = "esat_rust"
path = "Cargo.toml"
binding = "PyO3"
debug = false
