# esat pyproject.toml for setuptools and setuptools-rust
[build-system]
requires = ["setuptools >70.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "esat"
version = "2024.0.2"
requires-python = ">=3.10"
description = "EPA's Environmental Source Apportionment Toolkit python package."
authors = [
    {name = "Deron Smith", email = "smith.deron@epa.gov"},
    {name = "Mike Cyterski", email = "cyterski.mike@epa.gov"}
]
maintainers = [
    {name = "Deron Smith", email = "smith.deron@epa.gov"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/quanted/esat.git"
Issues = "https://github.com/quanted/esat/issues"

[tool.setuptools]
package-dir = {"esat" = "esat", "esat_eval" = "eval"}
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools-rust]
profile = "release"

[project.scripts]
esat = "esat.cli.esat_cli:esat_cli"

[[tool.setuptools-rust.ext-modules]]
target = "esat_rust"
path = "Cargo.toml"
binding = "PyO3"
debug = false
